--- a/rnn_compression_factorization_vmlmf/requirements.txt
+++ b/rnn_compression_factorization_vmlmf/requirements.txt
@@ -1,29 +1,7 @@
-
-html5lib==0.9999999
-
-matplotlib==3.3.4
-
-numpy==1.19.5
-
-pandas==1.1.5
-
-pycparser==2.20
-Pygments==2.8.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-pytz==2020.5
-PyYAML==5.4.1
-pyzmq==22.0.3
-
-scikit-learn==0.24.1
-scipy==1.5.4
-seaborn==0.11.1
-
-torch==1.7.1
-torchsummary==1.5.1
-torchvision==0.9.0
-
-urllib3==1.26.6
-
-zipp==3.4.0
+numpy
+pandas
+python-dateutil==2.8.2
+pytz==2021.3
+six==1.16.0
+#torch==1.7.1
+typing-extensions==3.10.0.2
